4/12/12 set correct sign (+,-) for intercept in interactive equation
4/12/12 adjust for minus sign when centering values in spinner
4/12/12 center value in spinner
4/12/12 don't allow slope and intercept to overlap, snap rise towards the origin (above or below intercept)
4/12/12 shrink the grid a bit, so that there's a margin around it for rise/run brackets
4/12/12 dynamically enable/disable the spinner buttons as the range changes
4/12/12 common color for all canvases
4/12/12 move non-app classes to linegraphing.common
4/12/12 rename packages for tabs 1 & 3
4/12/12 rename top-level classes for tabs 1 & 3
4/12/12 rename first tab (Slope-Intercept), add second tab (Point-Slope)
4/12/12 dynamically set the rise and intercept ranges, so that rise + intercept is constrained to the bounds of the graph
4/12/12 set up infrastructure for dynamically adjusting rise and intercept ranges
4/11/12 fix: when equation is minimized, equation on graphed line should be hidden, not the entire line
4/11/12 correct accidental use of Math.round when MathUtil.round was intended
# 0.00.04 (63327) Apr 11, 2012
4/11/12 hide equation on interactive line while manipulators are being dragged
4/11/12 fix: don't show rise/run bracket when value is zero
4/11/12 make manipulator drag handler specific to manipulator node
4/11/12 revert to continuous line manipulation
# 0.00.03 (63322) Apr 11, 2012
4/11/12 add a 2nd point tool
4/11/12 allow manipulators to be dragged continuously, but keep interactive line snapped to grid
4/11/12 bug fix in point tool, only solve equation when slope is defined
# 0.00.02 (63268) Apr 10, 2012
4/10/12 limit range of rise, run and intercept to -5 to 5 (half the range of the grid)
4/10/12 tweak interactive equation layout
4/10/12 move view properties from LineGraphNode to IntroCanvas
4/10/12 solve for y when deciding whether to highlight point tool, to avoid divide-by-zero
4/10/12 turn off point tool highlighting when lines are hidden on graph