@@ -13,7 +13,6 @@ SPINNER IDEAS
 HIGH
 
 MEDIUM
-- max width of spinners needs to be based the length of the axis ranges, not the min/max values
 - clean up standard line icons (no equation on line, shorter line)
 - don't like all the MathUtil.round that's going on
 
