@@ -1,3 +1,4 @@
+4/12/12 tweak the layout of spinner-based interactive equation
 4/12/12 set correct sign (+,-) for intercept in interactive equation
 4/12/12 adjust for minus sign when centering values in spinner
 4/12/12 center value in spinner
